# osmium-filter

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  iwyu.imp
doc/: language.md
include/: compiled_filter.hpp  object_filter.hpp
src/: CMakeLists.txt  compile.cpp  fromdump.cpp  main.cpp  object_filter.cpp  simple.cpp  test.cpp
test/: CMakeLists.txt  test_parser.cpp  tests.txt
